--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
-<head>
+<link>
     <meta charset="utf-8">
     <title>Jquery Carousel</title>
     <script src="/vendor/jquery/dist/jquery.min.js"></script>
     <script src="/assets/scripts/app.min.js"></script>
-    <script src="/vendor/bootstrap/dist/css/bootstrap.min.css"></script>
+    <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/dist/css/bootstrap.min.css"></link>
     <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
