--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,10 +3,10 @@
 <link>
     <meta charset="utf-8">
     <title>Jquery Carousel</title>
+    <link href="/vendor/bootstrap/dist/css/bootstrap.min.css">
     <script src="/vendor/jquery/dist/jquery.min.js"></script>
-    <script src="/assets/scripts/app.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/dist/css/bootstrap.min.css"></link>
     <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/assets/scripts/app.min.js"></script>
 </head>
 <body>
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
