--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,7 +3,7 @@
 <link>
     <meta charset="utf-8">
     <title>Jquery Carousel</title>
-    <link href="/vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link href="/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="/vendor/jquery/dist/jquery.min.js"></script>
     <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/assets/scripts/app.min.js"></script>
@@ -46,4 +46,4 @@
 </div>
 
 </body>
-</html
+</html>
