--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -6,6 +6,7 @@
     <link href="/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="/vendor/jquery/dist/jquery.min.js"></script>
     <script src="/assets/scripts/app.min.js"></script>
+    <link href="/assets/css/main.css" rel="stylesheet"/>
 </head>
 <body>
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
