--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -9,6 +9,7 @@
     <link href="/assets/css/main.css" rel="stylesheet"/>
 </head>
 <body>
+    <h1>Epsilon Carousel</h1>
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
