--- a/server/public/assets/css/main.css
+++ b/server/public/assets/css/main.css
@@ -1,7 +1,10 @@
 body {
     background-color: #342800;
 }
-
+h1 {
+    color: #73AFB6;
+    text-align: center;
+}
 .carousel {
     height: 300px;
     background-color: #E2DA99;
