--- a/server/public/assets/css/main.css
+++ b/server/public/assets/css/main.css
@@ -2,12 +2,12 @@ body {
     background-color: #342800;
 }
 h1 {
-    color: #73AFB6;
+    color: #5E9CAO;
     text-align: center;
 }
 .carousel {
     height: 300px;
-    background-color: #E2DA99;
+    background-color: #2B2301;
 }
 
 .carousel-inner {
