--- a/server/public/assets/css/main.css
+++ b/server/public/assets/css/main.css
@@ -5,8 +5,8 @@ h1 {
     color: #428F89;
     text-align: center;
     padding-bottom: 20px;
-    font-size: 32px;
-    font-family: roboto;
+    font-size: 42px;
+    font-family: 'Roboto';
 }
 .carousel {
     height: 300px;
@@ -19,4 +19,5 @@ h1 {
     color: #FFFFFF;
     padding-top: 35px;
     font-size: 16px;
+    font-family: 'Roboto';
 }
