--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -13,6 +13,9 @@
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
+            <img src="https://scontent.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/11209454_941686975890288_788103169570780027_n.png?oh=6c9dc6d5072f9ed2cd9a62b7301c3550&oe=5697FC0B" alt="people">
+
+
 
         </ol>
 
