--- a/server/public/assets/css/main.css
+++ b/server/public/assets/css/main.css
@@ -25,3 +25,11 @@ img {
     width: 100%;
     height: 500px;
 }
+
+.item.active.left {
+    opacity: 0;
+}
+
+.item.active.right {
+    opacity: 0;
+}
