--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Epsilon Carousel</h1>
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <div id="carousel-example-generic"  data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
 
